--- a/makePlanner/src/main/resources/templates/index.html
+++ b/makePlanner/src/main/resources/templates/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
+    <script src="/js/jquery/jquery.min.js"></script>
     <title>Hello! Join Us!!</title>
+    
 </head>
 <body>
-    <div class="loginWrap">
-        <div class="loginForm">
-            <h3>hello?! stranger!</h3>
-            <input type="text"><br>
-            <input type="password"><br>
-            <button type="submit">GO!!!</button>
-            <div class="join">
-                <span><a href="#">join Us</a></span>
-                <span class="forgotId"><a href="#">Forgot ID / PW</a></span>
-            </div>
-        </div>
-    </div>
+	<form action="/loginProc" method="post">
+    	<div class="loginWrap">
+	        <div class="loginForm">
+	            <h3>hello?! stranger!</h3>
+	            <input type="text" name="loginId" placeholder="Hello? Enter your ID"><br>
+	            <input type="password" name="loginPwd" placeholder="Enter your Password"><br>
+	            <button type="submit">GO!!!</button>
+	            <div class="join">
+	                <span><a href="#">join Us</a></span>
+	                <span class="forgotId"><a href="#">Forgot ID / PW</a></span>
+	            </div>
+	        </div>
+    	</div>
+	</form>
 </body>
 </html>
