[추가] 시큐리티 추가

--- a/makePlanner/src/main/resources/templates/main.html
+++ b/makePlanner/src/main/resources/templates/main.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <a class="navbar-brand mainNav" href="#">Check your plan!</a>
+        <a class="navbar-brand mainNav" href="#">Hey <span sec:authentication="name"></span>, Check your plan!</a>
     </nav>
 
     <div class="mainContainer">
