--- a/makePlanner/src/main/resources/templates/error.html
+++ b/makePlanner/src/main/resources/templates/error.html
@@ -13,19 +13,10 @@
     
 </head>
 <body>
-	<form action="/loginProc" method="post">
-    	<div class="loginWrap">
-	        <div class="loginForm">
-	            <h3>hello?! stranger!</h3>
-	            <input type="text" name="loginId" placeholder="Hello? Enter your ID"><br>
-	            <input type="password" name="loginPwd" placeholder="Enter your Password"><br>
-	            <button type="submit">GO!!!</button>
-	            <div class="join">
-	                <span><a href="#">join Us</a></span>
-	                <span class="forgotId"><a href="#">Forgot ID / PW</a></span>
-	            </div>
-	        </div>
-    	</div>
-	</form>
+   	<div class="loginWrap">
+        <div class="loginForm">
+            <h3>Opps!!!! ERROR!!!</h3>
+        </div>
+   	</div>
 </body>
 </html>
