[수정] userName -> name으로 변경

--- a/makePlanner/src/main/resources/templates/login.html
+++ b/makePlanner/src/main/resources/templates/login.html
@@ -18,8 +18,8 @@
     	<div class="loginWrap">
 	        <div class="loginForm">
 	            <h3><a href="/">hello?! stranger!</a></h3>
-	            <input type="text" name="username" placeholder="Hello? Enter your ID"><br>
-	            <input type="password" name="password" placeholder="Enter your Password"><br>
+	            <input type="text" name="userId" placeholder="Hello? Enter your ID"><br>
+	            <input type="password" name="userPwd" placeholder="Enter your Password"><br>
 	            <button type="submit">GO!!!</button>
 	            <div class="join">
 	                <span><a href="#">join Us</a></span>
