--- a/makePlanner/src/main/resources/static/css/style.css
+++ b/makePlanner/src/main/resources/static/css/style.css
@@ -93,5 +93,21 @@ nav, footer{
 }
 
 .diaryTh{
-    width: 100px;
+    width: 150px;
+}
+
+.main_btn{
+	float: right;
+	border: none;
+	border-radius: 5px;
+	background-color: transparent;
+	color: black;
+	width: 110px;
+}
+
+.main_link{
+	color: black;
+}
+..main_link:hover{
+	text-decoration:none;
 }
