--- a/makePlanner/src/main/resources/static/css/joinStyle.css
+++ b/makePlanner/src/main/resources/static/css/joinStyle.css
@@ -5,7 +5,8 @@
     font-style: normal;
 }
 
-.swal2-title {
+.swal2-title,
+#swal2-content {
   font-family: 'GowunBatang-Regular';
 }
 
@@ -88,7 +89,7 @@
     background: transparent;
 }
 .input_blank{
-	border-bottom: 1px solid blue;
+	border-bottom: 2px solid blue;
 }
 
 .input_alert{
