--- a/makePlanner/src/main/resources/static/fullcalendar/main.css
+++ b/makePlanner/src/main/resources/static/fullcalendar/main.css
@@ -285,6 +285,7 @@ When it's NOT activated, the fc-button classes won't even be in the DOM.
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-size:11px;
   }
 .fc .fc-toolbar.fc-header-toolbar {
     margin-bottom: 1.5em;
